# Bytcurve-Payroll-Adjustment-App

./: .docker-run.sh  .dockerignore  .env.example  .gitattributes  .gitignore  Bytcurve_Platform_Structure_Daily_View.html  Bytcurve_Platforme_Structure_Weekly_View.txt  ByteCurve Inspector.py  ByteCurve Payroll Adjustment Automation.py  Dockerfile  Events_For_Login_And_Adjustment.txt  README.md  Transcriptions - ByteCurve Payroll Adjusment.txt  audit_log.py  automation_core_refactored.py  cli.py  credential_store.py  credentials.enc  diagnose_dialog.py  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  employee_history.json  employee_scorer.py  install.ps1  install.sh  log_digest.py  pyproject.toml  requirements.txt  secret.key  task_classifier.py  task_classifier_log.db  task_classifier_model.pkl  test_audit_log.py  test_automation_core.py  test_container_smoke.py  test_credential_store.py
.github/workflows/: unit-tests.yml
Bytcurve-Payroll-Adjustment-App/: task_classifier.py
bytecurve_payroll.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/: automation_error_20260615_032608.html
